impostazione oscillatore, previewRenderer e WavRenderer, envelope e kyckSynth per un primo test di funzionamento