@@ -2,6 +2,9 @@ package com.soundapp.music.core.engine;
 
 public class AudioContext {
 
+    private AudioContext() {
+    }
+
     public static final int SAMPLE_RATE = 44100;
 
     public static final int CHANNELS = 2;
@@ -18,7 +21,14 @@ public class AudioContext {
         return (2.0 * Math.PI * frequency) / SAMPLE_RATE;
     }
 
+    //Il basso techno vive tra La1 (55 Hz) e La2 (110 Hz).
+    // Il kick fondamentale è spesso intorno a 50–60 Hz con il pitch che scende da ~150 Hz in ~80ms —
+    // per questo midiToFrequency diventa essenziale appena implementi KickSynth e AcidBass
+    public static float midiToFrequency(int midiNote) {
+        return (float)(440.0 * Math.pow(2.0, (midiNote - 69) / 12.0));
+    }
+
     public static float clamp(float value, float min, float max) {
-        return Math.max(min, Math.min(max, value));
+        return Math.clamp(value, min, max);
     }
 }
